Primeira leitura, emendas, capítulos 7 a 9

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -1396,7 +1396,7 @@ de tal modo que milhões de direções correm, paralelamente, em linhas retas
 e oblíquas, que se cruzam, se impedem, se impelem para frente e para
 trás e assim admitem, entre si, o caráter de acaso e de tal modo que,
 excetuando as intervenções dos eventos naturais, tornam impossível
-provar uma necessidade apreensível e abrangente daquilo que ocorre''.
+provar uma necessidade apreensível e abrangente daquilo que ocorre.
 \end{quote}
 
 Mas é justamente essa necessidade que aquele olhar ``objetivo'' das
@@ -1562,7 +1562,7 @@ história que apenas destrói, sem ter um impulso criador a conduzi-la,
 torna-se, com o tempo, pedante e inatural: pois esses homens destroem as
 ilusões e ``a natureza, como a mais dura tirana, pune quem destrói as
 ilusões em si e nos outros''\footnote{Goethe, ``Fragmento sobre a
-  natureza''.}. Pode-se até a lidar com a história de maneira inofensiva
+  natureza''.}. Pode-se até lidar com a história de maneira inofensiva
 e discreta, como se fosse uma ocupação como qualquer outra. Os novos
 teólogos, particularmente, parecem aprovar a história pura, devido ao
 seu caráter inofensivo, mal percebendo que com isso, e provavelmente
@@ -1583,12 +1583,12 @@ visível aos cérebros dos atuais \emph{theologus liberalis
 vulgaris}\footnote{Teólogo liberal comum.}. Se ouvir o que esses
 cristianismos puríssimos têm a falar dos antigos cristianismos impuros,
 um ouvido imparcial terá a impressão de que o assunto não é o
-cristianismo, mas -- o que devemos pensar disso? Quando vemos o
+cristianismo, mas o que devemos pensar disso? Quando vemos o
 cristianismo ser designado pelos ``maiores teólogos do século'' como a
 religião que se pode sentir no interior de todas as religiões existentes
 e ainda nas meramente possíveis e quando a ``Igreja verdadeira'' é
 aquela que ``se torna uma massa fluida e sem limites, onde cada parte se
-encontra aqui e acolá e tudo se mistura pacificamente'' -- Mais uma vez,
+encontra aqui e acolá e tudo se mistura pacificamente'', mais uma vez,
 o que devemos pensar disso?
 
 O que se pode aprender do cristianismo é que ele, sob o efeito de um
@@ -1617,7 +1617,7 @@ e mistério; se lhe tomam esta névoa, se uma religião, uma arte, um gênio
 é condenado a girar como um astro sem uma atmosfera: não se deve admirar
 do seu rápido apodrecimento, tornando-o duro e estéril. Assim ocorre com
 todas as grandes coisas, ``que não prosperam sem alguma ilusão'', como
-afirma Hans Sachs em \emph{Os mestre cantores}.
+afirma Hans Sachs em \emph{Os mestres-cantores}.
 
 Mas mesmo um povo, um homem que queira \emph{amadurecer} necessita dessa
 ilusão nevoenta, dessa nuvem envolvente e protetora; hoje em dia se
@@ -1659,7 +1659,9 @@ leitura da vida e obra dos filósofos de Diógenes Laércio:
 saber, que o que há de passageiro e mutável dos pensamentos e sistemas
 humanos me tinha atingido de forma quase mais trágica do que os
 destinos, que frequentemente são considerados a única
-realidade''\footnote{Carta de Hölderlin a J. v. Sinclair de 24/12/1798.}.
+realidade''\footnote{Carta de Hölderlin a 
+%Conferir se J. v. Sinclair não é, na verdade, Isaac von Sinclair
+J. v. Sinclair de 24/12/1798.}.
 Não, tal história transbordante, ensurdecedora e violenta certamente não
 é necessária para a juventude, como mostravam os antigos, sendo até
 mesmo perigosa, como mostram os modernos. No entanto, observem os
@@ -1672,7 +1674,7 @@ mais vaidosas, ele já ``criou''; ele se tornou um serviçal da história
 por intermédio dos fatos e um senhor no campo da história. Ele já estava
 ``pronto'' desde garoto, agora recebe apenas o acabamento; basta
 sacudi-lo para a verdade cair-lhe ruidosamente no colo; mas a verdade
-está podre e toda maça carrega consigo o seu bicho. Acreditem em mim: se
+está podre e toda maçã carrega consigo o seu bicho. Acreditem em mim: se
 um homem deve trabalhar na fábrica da ciência e ser útil antes de
 amadurecer, logo também a ciência se arruinará, como os modernos
 escravos dessa fábrica. Lamento o jargão e o uso de palavras como senhor
@@ -1699,12 +1701,12 @@ galinha que obrigam a pôr ovos artificial e rapidamente. É certo que a
 ciência recebeu um incentivo surpreendentemente rápido nas últimas
 décadas: mas observem os eruditos, são galinhas exaustas. Não são
 verdadeiramente naturezas ``harmônicas'': apenas cacarejam mais do que
-antes, por porem seus ovos publicamente: certamente os ovos são cada vez
+antes, por porem seus ovos publicamente; certamente os ovos são cada vez
 menores (embora os livros sejam cada vez mais grossos). Como resultado
 último e natural, alcança-se a amada ``popularização'' (ao lado da
 ``afeminação'' e da ``infantilização'') da ciência, isto é, o infame
-corte do tecido da ciência de acordo às medidas do ``público
-diversificado'': a fim de nos utilizarmos um alemão de alfaiataria para
+corte do tecido da ciência de acordo com as medidas do ``público
+diversificado'': a fim de nos utilizarmos de um alemão de alfaiataria para
 atividade própria à alfaiataria. Goethe via nisso um mau uso e exigia
 que a ciência só devesse exercer efeito no mundo exterior através de uma
 \emph{práxis superior}. Além disso, para as gerações mais antigas de
@@ -1715,7 +1717,7 @@ conhecimento, pertencem ao público diversificado e compartilham suas
 necessidades. Eles precisam se acomodar confortavelmente, e assim
 conseguem adequar seu pequeno campo de estudo àquela curiosidade popular
 geral. Para esse ato de acomodação forjam o nome de ``modesta
-condescendência do erudito para com seu povo'': enquanto, no fundo, o
+condescendência do erudito para com seu povo''; enquanto, no fundo, o
 erudito apenas se rebaixa a si mesmo, na medida em que não é um erudito,
 mas um plebeu. Criem para si o conceito de ``povo'': nunca poderão
 pensar nele de forma nobre e suficientemente elevada. Se vocês tivessem
@@ -1749,7 +1751,7 @@ de absurdo e superstição na crença de que a educação de um povo deva ser
 pesadamente histórica, como ocorre hoje; pois justamente os povos mais
 fortes, sobretudo em atos e obras, viveram e educaram sua juventude de
 forma diferente. Mas aquele absurdo e aquela superstição nos pertencem
--- assim nos objeta o cético -- nós, os últimos e pálidos rebentos de
+-- assim nos objeta o cético --, nós, os últimos e pálidos rebentos de
 gerações poderosas e exultantes, podemos interpretar a profecia de
 Hesíodo de que os homens nasceriam vetustos e que Zeus destruiria essa
 geração assim que esse sinal ficasse visível. A cultura histórica é de
@@ -1764,7 +1766,7 @@ de centenas de milhares de anos, ou seja, \emph{não} quer ser
 considerada como um todo a partir de um infinitamente pequeno ponto
 atômico, um homem singular. O que poucos milênios podem nos ensinar (ou,
 para expressar de outra forma, trinta e quatro anos consecutivos de uma
-vida de sessenta anos), para podermos falar, no início, de uma
+vida de sessenta anos) para podermos falar, no início, de uma
 ``juventude'', e, no final, ``da velhice da humanidade''! Não se esconde
 nessa crença paralisante em uma humanidade já murcha o mal-entendido de
 uma concepção teológica cristã, herdada da Idade Média, a ideia
@@ -1793,20 +1795,22 @@ esperanças: só contra a vontade ela deixa que o devir a estimule e, no
 momento certo, o desconsidera e o sacrifica, como uma sedução para a
 existência, como uma mentira a respeito da vida. Aquilo que os
 florentinos faziam, quando eles, impressionados com os sermões de
-Savonarola\footnote{Girolama Savonarola (1452-98), monge italiano.},
+Savonarola\footnote{Girolamo Savonarola (1452-98), monge
+%frade dominicano, Ordem não monástica, verificar
+ italiano.},
 patrocinaram aquelas célebres fogueiras sacrificais, queimando quadros,
 manuscritos, espelhos e máscaras, o cristianismo podia fazer com
 qualquer cultura que estimula a perseverança e toma o \emph{memento
 vivere} como lema; e quando não é possível fazer isso direta e
-serenamente, isto é, com superioridade, ela alcança em todo caso seu
+serenamente, isto é, com superioridade, ela alcança, em todo caso, seu
 objetivo, quando se alia à cultura histórica, na maioria das vezes sem
 cumplicidade e, falando a partir de si, rejeita todo devir com
 indiferença e dissemina o sentimento de ser serôdio e epígono, em
 resumo, de ter nascido vetusto. A consideração amarga e profundamente
 séria sobre o desvalor de todo passado, sobre como o mundo está pronto
-para ser julgado, afugentou-se na consciência cética de que em todo o
+para ser julgado, afugentou-se na consciência cética de que em todo 
 caso é bom conhecer o passado por completo, porque é muito tarde para
-fazer algo melhor. Assim o sentido histórico realiza seu serviço de
+fazer algo melhor. Assim, o sentido histórico realiza seu serviço de
 forma passiva e retrospectiva, e só por um esquecimento momentâneo, na
 intermitência desse sentido, o paciente da febre histórica se torna
 ativo, para que, assim que a ação acabe, disseque o ato com a observação
@@ -1814,7 +1818,7 @@ analítica, com o propósito de evitar sua proliferação e enfim tirar sua
 pele em nome da ``história''. Nesse sentido, vivemos ainda como na Idade
 Média e a história é uma teologia disfarçada: como também a veneração
 com que os cientificamente leigos tratam a casta de cientistas é uma
-veneração herdada do clero. O que a Igreja antes oferecia hoje a ciência
+veneração herdada do clero. O que a Igreja antes oferecia, hoje a ciência
 oferece, embora tardiamente: mas a Igreja ainda oferecia algo que
 produzia seus efeitos, ao contrário do espírito moderno, que, ao lado de
 suas boas qualidades, são reconhecidas sua avareza e sua inaptidão para
@@ -1826,8 +1830,8 @@ o cristianismo traz no coração a respeito de todo futuro da existência
 terrena. Deve-se, ao menos, substituir essa minha explicação hesitante
 por uma explicação melhor; pois a origem da cultura histórica -- e seu
 radical desacordo com o espírito de uma ``época moderna'', de ``uma
-consciência moderna'' dessa origem, \emph{deve} ser ela mesma novamente
-ser conhecida historicamente, a história \emph{deve} resolver o próprio
+consciência moderna'' dessa origem --, \emph{deve} ser ela mesma outra vez
+conhecida historicamente, a história \emph{deve} resolver o próprio
 problema da história, o saber \emph{deve} voltar seu ferrão contra si
 mesmo -- esse triplo ``\emph{deve}'' é o imperativo do espírito da
 ``época moderna'', caso nele haja realmente algo de novo, poderoso,
@@ -1837,29 +1841,34 @@ superiores da cultura, sempre tardios, porque só isso \emph{podemos}
 ser, como expressa essa instigante frase de Wilhelm
 Wackernagel\footnote{Wilhelm Wackernagel (1806-69), filólogo alemão.
   Citação da obra \emph{Ensaios sobre a história literária alemã}.}:
-``Nós, alemães, somos um povo de descendentes, somos sempre, com todo o
+
+\begin{quote}
+Nós, alemães, somos um povo de descendentes, somos sempre, com todo o
 nosso saber superior, até mesmo com nossas crenças, herdeiros do mundo
 antigo; e também aqueles que têm o mundo antigo como adversário não
 deixam de respirar, além do espírito do cristianismo, o espírito imortal
 da cultura clássica, e caso alguém conseguisse subtrair esses dois
 elementos do sopro de vida que preenche o interior do homem, então não
-restaria muita coisa para manter uma vida espiritual''. Mesmo com a
+restaria muita coisa para manter uma vida espiritual. 
+\end{quote}
+
+Mesmo com a
 vocação de herdeiro da Antiguidade, nos acalmaria se decidíssemos
 tomá-la firmemente como séria e grande, e reconhecêssemos nessa firmeza
 nosso único e excelso privilégio -- então, apesar disso, seríamos
 obrigados a perguntar se o nosso destino eterno deva ser o do
 \emph{pupilo da} \emph{Antiguidade em declínio}: quando será permitido
-atingir nosso alvo a passos altos e largos, quando mereceremos o elogio
+atingir nosso alvo a passos altos e largos? Quando mereceremos o elogio
 de termos recriado em nós o espírito da cultura alexandrino-romana --
 também em nossa história universal -- de uma forma tão frutífera e
-grandiosa, a fim de que, como recompensa mais nobre, podermos nos propor
+grandiosa, a fim de, como recompensa mais nobre, podermos nos propor
 a tarefas intensas, entre elas retornar ao mundo alexandrino e
 superá-lo, procurando nossos modelos de olhar intrépido nos gregos
-antigos, no mundo originário da grandeza, do natural e do humano.
+antigos, no mundo originário da grandeza, do natural e do humano? 
 \emph{Mas lá encontramos também a realidade de uma cultura
 essencialmente aistórica e uma cultura, apesar ou talvez por isso mesmo,
 indizivelmente rica e viva}. Não fôssemos nós, alemães, nada além de
-herdeiros -- não poderíamos, vendo essa cultura como herança a ser
+herdeiros, não poderíamos, vendo essa cultura como herança a ser
 apropriada, ser algo maior e orgulhoso que herdeiros.
 
 Devemos única e exclusivamente dizer que, mesmo o pensamento,
@@ -1913,20 +1922,20 @@ depois dele deveriam ser avaliadas como uma coda musical do rondó da
 história universal ou, de forma mais apropriada, como supérfluas. Isso
 ele não disse: ele plantou nas gerações por ele fermentadas a admiração
 pelo ``poder da história'', que envolve praticamente todo instante na
-admiração nua do desfecho e conduz à idolatria do factual: para cujo
-serviço agora se esmera no mote mitológico e além disso bem alemão de
+admiração nua do desfecho e conduz à idolatria do factual, para cujo
+serviço agora se esmera no mote mitológico e, além disso, bem alemão de
 universalmente ``levar em conta os fatos''. Mas isso é para quem
 aprendeu a se curvar e a baixar a cabeça diante do ``poder da
 história'', quem enfim a balança com seu ``sim'', mecanicamente, como
 uma marionete chinesa, a todo poder, seja do governo, da opinião pública
 ou da maioria numérica, e que movimenta seus membros no mesmo ritmo em
 que um poder qualquer titereia\footnote{No alemão, ``\emph{am Faden
-  ziehen}'', que, como no inglês ``\emph{to pull the strings}'', provém
+  ziehen}'' que, como no inglês ``\emph{to pull the strings}'', provém
   da imagem do titereiro; literalmente significa ``puxar os fios'' e
   figurativamente quer dizer controlar, exercer influência. Seguimos
   aqui a sugestão de ambos os tradutores de língua inglesa de fazer
   referência às marionetes chinesas, o que está implícito no texto em
-  alemão: ``der nickt zuletzt chinesenhaft-mechanisch sein ‚Ja` zu jeder
+  alemão: ``der nicht zuletzt chinesenhaft-mechanisch sein `Ja' zu jeder
   Macht'' (``que enfim balança a cabeça com seu `sim', de forma
   mecânico-chinesa, a todo poder'').}. Contivesse aquele resultado uma
 necessidade racional em si, fosse aquele evento a vitória da lógica ou
@@ -1950,8 +1959,8 @@ ira et studio} {[}sem ódio e sem parcialidade{]}\footnote{Frase de
 
 Mas que pensamentos antiquados contra tal complexo de mitologia e
 virtude trago eu no coração! Mas eles devem ser expostos, mesmo que só
-produza o riso. Também diria: a história sempre insiste: ``era uma
-vez'', a moral: ``não devem'' ou ``não deveriam''. Assim a história se
+produza o riso. Também diria: a história sempre insiste, ``era uma
+vez''; a moral, ``não devem'' ou ``não deveriam''. Assim a história se
 torna um compêndio de uma imoralidade factual. Quão difícil se enganaria
 aquele que visse a história ao mesmo tempo como juíza dessa imoralidade
 factual! Ofende a moral, por exemplo, que um Rafael devesse morrer aos
@@ -1961,7 +1970,7 @@ expressou o que estava nele, ele teria, numa vida mais longa, podido
 criar sempre o belo como o mesmo belo, não como um novo belo, etc. São
 advogados do diabo, quando conseguem fazer do fato o seu ídolo: enquanto
 o fato é sempre estúpido e em toda época ele se aproxima mais de um
-bezerro do que um deus. Além disso, como apologistas da história, é a
+bezerro do que de um deus. Além disso, como apologistas da história, é a
 ignorância que lhes sopra as respostas: pois é não saber o que é uma
 \emph{natura naturans} {[}natureza criadora{]} como Rafael que faz que
 não ouçam com força que ela se foi e não mais existirá. Sobre Goethe,
@@ -1985,9 +1994,9 @@ ou se exigindo a honestidade, enquanto a mentira tece sua brilhante teia
 em sua volta. Se a história não fosse nada além que ``o sistema
 universal da paixão e do erro'', então o homem teria de nela ler, como
 Goethe fazia ler o \emph{Werther}, igualmente como se gritasse: ``seja
-um homem e não me siga''! Felizmente ela preserva também a memória das
+um homem e não me siga!'' Felizmente, ela preserva também a memória das
 grandes lutas \emph{contra a história}, ou seja, contra o poder cego do
-real e se coloca assim no pelourinho para destacar como autêntica
+real, e se coloca assim no pelourinho para destacar como autêntica
 natureza histórica aquele que se preocupa menos com ``assim são as
 coisas'', para, ao contrário, seguir um ``assim devem ser as coisas''.
 Não levar sua geração à cova, mas fundar uma nova geração -- isso os
@@ -1995,42 +2004,38 @@ leva insistentemente adiante: e se eles mesmo nascerem como rebentos
 tardios -- existe uma maneira de esquecer isso; as gerações futuras só
 os conhecerão como primogênitos.
 
-\begin{enumerate}
-\item ~
-  \chapter{Capítulo 9}\label{capuxedtulo-9}
+\chapter{Capítulo 9}\label{capuxedtulo-9}
 
-  \begin{enumerate}
-  \item
-    Talvez seja nossa época esse primogênito? -- De fato, a veemência de
-    seu sentido histórico é tão grande, sua expressão, tão universal e
-    ilimitada, que os tempos vindouros elogiarão, no mínimo, sua
-    primogenitura -- caso venha a haver, culturalmente falando, \emph{um
-    tempo vindouro}. Mas resta aqui uma séria dúvida. Junto ao orgulho
-    do homem moderno está sua \emph{ironia} sobre si mesmo, sua
-    consciência de viver em um estado de espírito historial e noturno,
-    em seu temor de futuramente não mais poder resguardar suas
-    esperanças e forças juvenis. Vez por outra, ele recai no
-    \emph{cinismo}, justificando o percurso da história segundo o cânone
-    do cinismo, adequando o desenvolvimento universal para o uso do
-    homem moderno: o que agora existe é exatamente o que devia ocorrer,
-    o homem não devia tornar-se outra coisa senão o que é hoje; contra
-    esse ``dever'' ninguém pode rebelar-se. Quem não consegue suportar a
-    ironia se refugia no bem-estar desse cinismo; além do mais, é
-    agraciado com a última e bela invenção da década passada, uma frase
-    perfeita para aquele cinismo: chama-se a forma atual de ser e viver
-    placidamente, ``a completa renúncia da personalidade no processo do
-    mundo''\footnote{Citação da \emph{Filosofia do inconsciente}, de
-      Eduard von Hartmann. As citações seguintes de Hartmann provêm
-      desse livro.}. A personalidade e o processo do mundo! O processo
-    do mundo e a personalidade de um pulgão! Se não se tivesse de ouvir
-    eternamente a hipérbole das hipérboles: a palavra mundo, mundo,
-    mundo, ele deveria, com honestidade, falar em homem, homem, homem!
-    Herdeiros dos gregos e romanos? Do cristianismo? Isso tudo não é
-    nada para esse cínico; herdeiros do processo do mundo, isso sim!
-    Ápice e alvo do processo do mundo. Sentido e solução de todos os
-    enigmas do devir, expressos no homem moderno como fruto mais maduro
+Talvez seja nossa época esse primogênito? -- De fato, a veemência de
+seu sentido histórico é tão grande, sua expressão, tão universal e
+ilimitada, que os tempos vindouros elogiarão, no mínimo, sua
+primogenitura -- caso venha a haver, culturalmente falando, \emph{um
+tempo vindouro}. Mas resta aqui uma séria dúvida. Junto ao orgulho
+do homem moderno está sua \emph{ironia} sobre si mesmo, sua
+consciência de viver em um estado de espírito historial e noturno,
+em seu temor de futuramente não mais poder resguardar suas
+esperanças e forças juvenis. Vez por outra, ele recai no
+\emph{cinismo}, justificando o percurso da história segundo o cânone
+do cinismo, adequando o desenvolvimento universal para o uso do
+homem moderno: o que agora existe é exatamente o que devia ocorrer,
+o homem não devia tornar-se outra coisa senão o que é hoje; contra
+esse ``dever'' ninguém pode rebelar-se. Quem não consegue suportar a
+ironia se refugia no bem-estar desse cinismo; além do mais, é
+agraciado com a última e bela invenção da década passada, uma frase
+perfeita para aquele cinismo: chama-se a forma atual de ser e viver
+placidamente, ``a completa renúncia da personalidade no processo do
+mundo''\footnote{Citação da \emph{Filosofia do inconsciente}, de
+Eduard von Hartmann. As citações seguintes de Hartmann provêm
+desse livro.}. A personalidade e o processo do mundo! O processo
+do mundo e a personalidade de um pulgão! Se não se tivesse de ouvir
+eternamente a hipérbole das hipérboles: a palavra mundo, mundo,
+mundo, ele deveria, com honestidade, falar em homem, homem, homem!
+Herdeiros dos gregos e romanos? Do cristianismo? Isso tudo não é
+nada para esse cínico; herdeiros do processo do mundo, isso sim!
+Ápice e alvo do processo do mundo. Sentido e solução de todos os
+enigmas do devir, expressos no homem moderno como fruto mais maduro
     da árvore do conhecimento! -- Eu denomino tudo isso de exaltação
-    inflada; neste emblema se reconhecem os primogênitos de todos os
+    inflada; nesse emblema se reconhecem os primogênitos de todos os
     tempos, mesmo que tenham chegado por último. Nunca a consideração
     histórica voou tão alto, nem mesmo em sonho: agora a história humana
     é apenas a continuação da história animal e vegetal; e até nas
@@ -2039,7 +2044,7 @@ os conhecerão como primogênitos.
     percorreu, como um milagre surpreendente, desvia os olhos do milagre
     ainda mais surpreendente, o do homem moderno que é capaz de abarcar
     com os olhos esse caminho. Ele está, altivo e orgulhoso, na pirâmide
-    do processo do mundo: ele coloca sobre ela a derradeira pedra de seu
+    do processo do mundo, ele coloca sobre ela a derradeira pedra de seu
     conhecimento; parece berrar para a natureza que ouve à sua volta:
     ``alcançamos a meta, somos a meta, somos a natureza perfeita''.
 
@@ -2088,9 +2093,9 @@ os conhecerão como primogênitos.
     Quem quisesse expressar, com justa rispidez, o que Hartmann nos
     anuncia do tripé enfumaçado e envolvente da ironia inconsciente,
     diria: ele afirma que nossa época deverá ser assim como ela é apenas
-    quando a humanidade se satisfizer seriamente com sua existência: o
-    que acreditamos de coração. Aquela terrível fossilização da época,
-    aquele bater inquieto de ossos -- como David Strauss ingenuamente
+    quando a humanidade se satisfizer seriamente com sua existência, o
+    que acreditamos de coração. Aquela terrível fossilização da época e
+    aquele bater inquieto de ossos -- como David Strauss, ingenuamente,
     nos esboçava como a mais bela facticidade -- foram justificados por
     Hartmann, não retrospectivamente, \emph{ex causis efficientibus}
     {[}a partir de causas eficientes{]}, mas prospectivamente, \emph{ex
@@ -2117,10 +2122,10 @@ os conhecerão como primogênitos.
     ele \emph{deve} vir, pois, com o todo, estamos no melhor caminho --
     de nojo diante de todo existente. ``Por isso, siga para o alto no
     processo do mundo como trabalhador no vinhedo do Senhor, pois o
-    processo é aquilo pode conduzir à redenção!''.
+    processo é aquilo que pode conduzir à redenção!''.
 
     O vinhedo do Senhor! O processo! Para a redenção! Quem não vê e ouve
-    aqui a cultura histórica, que só conhece a palavra ``devir''? Como
+    aqui a cultura histórica que só conhece a palavra ``devir''? Como
     ela, intencionalmente, se disfarça numa deformidade paródica, como
     ela, através de uma careta grotesca, diz as coisas mais pérfidas!
     Pois o que propriamente exige esse último chamado piadista aos
@@ -2139,7 +2144,7 @@ os conhecerão como primogênitos.
     nessa frase sua própria justificação e além disso sua justificação à
     luz apocalíptica. Pois o parodista inconsciente exige de cada
     indivíduo ``a completa renúncia da personalidade no processo do
-    mundo, em nome de sua finalidade, em nome da redenção do mundo'':
+    mundo, em nome de sua finalidade, em nome da redenção do mundo''
     ou, mais claro e evidente: ``a afirmação da vontade de vida é
     proclamada correta apenas preliminarmente; pois apenas o abandono da
     vida e de suas dores, mas não em uma abdicação pessoal covarde e
@@ -2150,11 +2155,11 @@ os conhecerão como primogênitos.
     filosofia prática que não contém a cisão, mas a conciliação com a
     vida''.
 
-    O leitor que reflete entenderá: e como Hartmann pode ser
+    O leitor que reflete entenderá: como Hartmann pode ser
     mal-entendido! E como é indizivelmente divertido que o entenda mal!
     Os alemães atuais são muito refinados? Um inglês de coragem sente
     neles a falta de \emph{delicacy of perception} {[}delicadeza da
-    percepção{]}, ousa até a dizer: ``\emph{in the German mind there
+    percepção{]}, ousa até dizer: ``\emph{in the German mind there
     does seem to be something splay, something blunt-edged, unhandy and
     infelicitous}''\footnote{O espírito alemão parece ser algo oblíquo,
       embotado, inútil e inapropriado.} -- O grande parodista gostaria
@@ -2179,7 +2184,7 @@ os conhecerão como primogênitos.
     não continuarão um processo, mas sim viverão na sincronicidade e na
     atemporalidade, graças à história, que permite esse efeito conjunto;
     eles viverão como uma república de gênios, como uma vez relatou
-    Schopenhauer; um gigante chama a outro através de intervalos de
+    Schopenhauer; um gigante chama outro através de intervalos de
     tempo desérticos, impassíveis aos anões pérfidos e barulhentos que
     rastejam sob eles, continuando um diálogo superior. A tarefa da
     história é ser a mediadora entre eles e sempre dar oportunidade à
@@ -2206,14 +2211,14 @@ os conhecerão como primogênitos.
     distante; pois ainda há muita alegria na Terra, algumas ilusões
     ainda vicejam, por exemplo, a ilusão dos contemporâneos com relação
     a você; não somos maduros o suficiente para sermos catapultados de
-    volta ao seu nada, pois acreditamos que ainda pode acontecer coisas
-    mais divertidas, quando se começar a se entender você, inconsciente
+    volta ao seu nada, pois acreditamos que ainda podem acontecer coisas
+    mais divertidas, quando se começar a entender você, inconsciente
     incompreensível. Mas se, apesar disso, o nojo vier com força, como
     assim o profetizou a seus leitores, se estiver correto no esboço que
     fez de seu presente e de seu futuro -- e ninguém desprezou a ambos
     como você, com nojo, os desprezou -- então estarei pronto para
     concordar, com a maioria, na forma que propôs, que no próximo
-    sábado, pontualmente à meia-noite, seu mundo se aniquilará: e nosso
+    sábado, pontualmente à meia-noite, seu mundo se aniquilará, e nosso
     decreto poderá rezar: a partir de amanhã cessará o tempo e os
     jornais não serão lançados\footnote{Não mantivemos o jogo entre
       \emph{Zeit} (tempo) e \emph{Zeitung} (jornal).}. Mas talvez não
@@ -2222,7 +2227,7 @@ os conhecerão como primogênitos.
     em um prato, o inconsciente de Hartmann; no outro, o processo do
     mundo de Hartmann. Há homens que acreditam que ambos terão o mesmo
     peso: pois em cada prato repousaria uma palavra igualmente ruim e
-    uma piada igualmente boa. -- Quando se compreende a piada de
+    uma piada igualmente boa. Quando se compreende a piada de
     Hartmann, ninguém mais precisa usar a expressão ``processo do
     mundo'', a não ser em piadas. De fato, já é hora de avançar, com um
     exército de comentários sarcásticos, contra o excesso do sentido
@@ -2243,8 +2248,8 @@ os conhecerão como primogênitos.
     e nobre. Pereça por ele -- não conheço melhor finalidade da vida do
     que perecer na busca do grande e impossível, \emph{animae magna
     prodigus}\footnote{``Pródigo de grande alma''\textbf{.} Expressão de
-      Horácio, Odes I, significando ``sem cuidado com a vida''.}. Se, ao
-    contrário, as doutrinas do devir soberano, da fluidez dos todos os
+      Horácio, \emph{Odes I}, significando ``sem cuidado com a vida''.}. Se, ao
+    contrário, as doutrinas do devir soberano, da fluidez de todos os
     conceitos, tipos e espécies, da ausência de toda diferença cardinal
     entre homem e animal, doutrinas que tomo por verdadeiras mas letais
     -- na sanha de ensinamentos hoje habituais, for lançada ao povo por
@@ -2252,7 +2257,7 @@ os conhecerão como primogênitos.
     pequenez egoísta e miséria, por fossilização e egoísmo, primeiro
     desmoronando e deixando de ser povo: em seu lugar poderão surgir
     talvez, na arena do futuro, sistemas de egoísmos individuais,
-    fraternizações para fins de pilhagem dos não-irmãos e criações
+    fraternizações para fins de pilhagem dos não irmãos e criações
     semelhantes de vulgaridade utilitária. Que se vá adiante para
     preparar essa criação de escrever a história do ponto de vista das
     \emph{massas} e procurar aquelas leis que se deduzem das
@@ -2271,7 +2276,7 @@ os conhecerão como primogênitos.
     valor e a história não terá valor. Mas justamente essa espécie de
     história é hoje estimada, essa que toma os impulsos da massa como a
     coisa mais importante e principal na história e considera todos os
-    grandes homens apenas a expressão mais clara e igualmente como
+    grandes homens apenas a expressão mais clara e, igualmente, como
     borbulhas visíveis na enchente. Daí a massa deve dar à luz, de si, a
     grandeza, do caos, a ordem; no fim, será entoado então o hino à
     massa genitora. Grandioso será chamado então tudo que moveu essa
@@ -2286,7 +2291,9 @@ os conhecerão como primogênitos.
     provam a respeito da grandeza de seu fundador, já que provariam algo
     contra ele: mas entre ele e o sucesso histórico repousa uma camada
     bem terrena e obscura de paixão, erro, ânsia por poder e honra, de
-    uma força atuante do \emph{imperium romanum}, uma camada da qual o
+    uma força atuante do \emph{imperium romanum}
+    %Traduzir imperium romanum?
+    , uma camada da qual o
     cristianismo recebeu seu gosto telúrico e seu resto telúrico, que
     possibilitou sua continuação no mundo e igualmente fornecia sua
     conservação. O grandioso não deve depender do sucesso, e Demóstenes
@@ -2315,9 +2322,9 @@ os conhecerão como primogênitos.
     ao Estado uma missão bem particular no sistema universal fundador do
     egoísmo: ele deve se tornar o patrono de todo egoísmo prudente, para
     se proteger, com força militar e policial, contra o terrível
-    desencadeamento do egoísmo imprudente. Para os mesmos fins a
+    desencadeamento do egoísmo imprudente. Para os mesmos fins, a
     história -- tanto animal quanto humana -- vem sendo inculcada nas
-    perigosas, porque imprudentes, massas populares e proletários,
+    perigosas, porque imprudentes, massas populares e proletárias,
     porque se sabe que um grão de cultura histórica é capaz de
     desencadear os instintos e desejos mais toscos e brutos ou conduzir
     à trilha do egoísmo refinado. Em suma: falando com E. von Hartmann,
@@ -2331,36 +2338,34 @@ os conhecerão como primogênitos.
     madura, como eles ``veem toda a paixão de sua vida pregressa
     irromper desordenadamente e compreendem a vaidade dos supostos fins
     de então''. Não, corresponde a uma era humana daquele egoísmo
-    cultivado historicamente e batido uma era senil, de uma ambição de
-    vida repugnante e indigna e assim, o último ato, que
-  \end{enumerate}
-\end{enumerate}
+    cultivado historicamente e batid, uma era senil, de uma ambição de
+    vida repugnante e indigna e, assim, o último ato, que 
 
-``encerra a estranha história agitada,
-
+    \begin{quote}
+    \begin{verse}
+    encerra a estranha história agitada,
 em uma segunda infância e total esquecimento
+sem olhos, sem dentes, sem paladar, sem nada.\footnote{Shakespeare,
+  \emph{Como gostais}, Ato 2, Cena 7.}
+  \end{quote}
+  \end{verse}
 
-sem olhos, sem dentes, sem paladar, sem nada''\footnote{Shakespeare,
-  \emph{Como gostais}, Ato 2, Cena 7.}.
-
-\begin{enumerate}
-\item
   Quer os perigos de nossa vida e nossa cultura provenham desses velhos
   devastados, desdentados e sem paladar ou dos daqueles chamados
   ``homens'' de Hartmann: diante de ambos queremos cravar com os dentes
   o direito de nossa \emph{juventude} e não cansaremos de defender o
   futuro de nossa juventude contra aqueles iconoclastas da imagem do
   futuro. Mas nessa luta devemos ter uma percepção particularmente ruim:
-  \emph{que, intencionalmente, se fomenta, anima e -- utiliza -- o
+  \emph{que, intencionalmente, se fomenta, anima -- e utiliza -- o
   excesso do sentido histórico que o momento sofre}.
 
   Mas se o utiliza contra a juventude, para esta se adestrar àquela
-  maturidade de um egoísmo almejado em todos os lugares, se o utiliza
+  maturidade de um egoísmo almejado em todos os lugares, utiliza-o
   para romper a indisposição natural da juventude ao egoísmo
   viril-inviril por meio de uma luz transfiguradora, quer dizer,
   mágico-científica. Aliás, do que o sobrepeso de história é capaz se
   sabe muito bem: desenraizar os instintos mais fortes da juventude,
-  como fogo, repúdio, auto-esquecimento e amor, abrandar o calor do seu
+  como fogo, repúdio, autoesquecimento e amor, abrandar o calor do seu
   sentimento de justiça, murchar lentamente seus desejos com os desejos
   contrários de estar rapidamente pronta, útil, fértil, pressioná-la
   para baixo ou para trás, adoecer a honestidade e polidez das sensações
@@ -2385,16 +2390,11 @@ sem olhos, sem dentes, sem paladar, sem nada''\footnote{Shakespeare,
   e o objetivo daquele ``homem'' e ``idoso'' hartmanniano sejam
   justamente a redenção do mundo: certamente o mundo estaria redimido se
   se redimisse desses homens e idosos. Aí então adviria o reino da
-  juventude! --.
-\end{enumerate}
+  juventude!
 
-\begin{enumerate}
-\item ~
-  \chapter{Capítulo 10}\label{capuxedtulo-10}
+\chapter{Capítulo 10}\label{capuxedtulo-10}
 
-  \begin{enumerate}
-  \item
-    Neste momento, pensando na \emph{juventude}, eu brado: terra à
+Neste momento, pensando na \emph{juventude}, eu brado: terra à
     vista! Terra à vista! Satisfeito e mais que satisfeito desta viagem
     emotiva, exploradora e errante em direção a mares estranhos e
     sombrios! Finalmente agora surge uma costa: para saber como ela é
@@ -2524,7 +2524,7 @@ sem olhos, sem dentes, sem paladar, sem nada''\footnote{Shakespeare,
 
     Mas é com essa verdade necessária que \emph{nossa primeira geração}
     deve ser educada; é certo que ela sofrerá mais, pois deverá
-    ensiná-la a si mesma e até contra si mesma, para chegar a um novo
+    ensiná-la a si mesma e até contra si mesmo, para chegar a um novo
     hábito e uma nova natureza a partir de uma natureza e de um hábito
     anteriores e envelhecidos: de tal modo que ela possa falar entre si,
     em espanhol antigo, ``\emph{Defienda me Dios de my}'', ``Deus,
